--- a/pasta_pessoal/redacao/redacao.ipynb
+++ b/pasta_pessoal/redacao/redacao.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,35 +38,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "\n",
-    "# Coordenadas dos 4 pontos que você já conhece (substitua pelos seus valores)\n",
-    "pontos_conhecidos = [(100, 150), (300, 150), (300, 400), (100, 400)]  # Exemplo: (x1, y1), (x2, y2), (x3, y3), (x4, y4)\n",
-    "\n",
-    "# Definir os pontos de origem (os 4 pontos que você já conhece)\n",
+    "pontos_conhecidos = [\n",
+    "    (14, 185),   # Canto superior esquerdo\n",
+    "    (702, 186),  # Canto superior direito\n",
+    "    (14, 912),   # Canto inferior esquerdo\n",
+    "    (703, 912)   # Canto inferior direito\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, binary_image = cv2.threshold(image, 0, 255, cv2.THRESH_BINARY_INV + cv2.THRESH_OTSU)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "src_points = np.float32(pontos_conhecidos)\n",
     "\n",
     "# Definir os pontos de destino (um retângulo)\n",
-    "width = 500  # Largura da região recortada\n",
-    "height = 500  # Altura da região recortada\n",
-    "dst_points = np.float32([[0, 0], [width, 0], [width, height], [0, height]])\n",
+    "# A largura e altura da região recortada serão baseadas na distância entre os pontos\n",
+    "width = int(np.linalg.norm(np.array(pontos_conhecidos[1]) - np.array(pontos_conhecidos[0])))  # Largura\n",
+    "height = int(np.linalg.norm(np.array(pontos_conhecidos[2]) - np.array(pontos_conhecidos[0])))  # Altura\n",
     "\n",
-    "# Calcular a matriz de transformação de perspectiva\n",
+    "dst_points = np.float32([[0, 0], [width, 0], [0, height], [width, height]])\n",
+    "\n",
+    "# Passo 3: Calcular a matriz de transformação de perspectiva\n",
     "matrix = cv2.getPerspectiveTransform(src_points, dst_points)\n",
     "\n",
-    "# Aplicar a transformação de perspectiva\n",
-    "result = cv2.warpPerspective(image, matrix, (width, height))\n",
+    "# Passo 4: Aplicar a transformação de perspectiva na imagem binarizada\n",
+    "result = cv2.warpPerspective(binary_image, matrix, (width, height))\n",
     "\n",
-    "# Salvar a imagem recortada\n",
-    "cv2.imwrite('regiao_recortada.png', result)\n",
+    "# Passo 5: Salvar a imagem recortada\n",
+    "cv2.imwrite('regiao_recortada_binarizada.png', result)\n",
     "\n",
-    "# Exibir a região recortada\n",
-    "cv2.imshow(\"Região Recortada\", result)\n",
+    "# Passo 6: Exibir a região recortada\n",
+    "cv2.imshow(\"Região Recortada e Binarizada\", result)\n",
     "cv2.waitKey(0)\n",
     "\n",
     "# Fechar todas as janelas\n",
@@ -75,96 +93,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
+    "import pygame\n",
     "\n",
-    "# Coordenadas dos 4 pontos que você já conhece (substitua pelos seus valores)\n",
-    "pontos_conhecidos = [(100, 150), (300, 150), (300, 400), (100, 400)]  # Exemplo: (x1, y1), (x2, y2), (x3, y3), (x4, y4)\n",
+    "# Inicializa o Pygame\n",
+    "pygame.init()\n",
     "\n",
-    "# Definir os pontos de origem (os 4 pontos que você já conhece)\n",
-    "src_points = np.float32(pontos_conhecidos)\n",
+    "# Configurações\n",
+    "WIDTH, HEIGHT = 600, 600\n",
+    "ROWS, COLS = 8, 8\n",
+    "SQUARE_SIZE = WIDTH // COLS\n",
+    "WHITE = (240, 217, 181)\n",
+    "BLACK = (0, 0, 0)\n",
     "\n",
-    "# Definir os pontos de destino (um retângulo)\n",
-    "width = 500  # Largura da região recortada\n",
-    "height = 500  # Altura da região recortada\n",
-    "dst_points = np.float32([[0, 0], [width, 0], [width, height], [0, height]])\n",
+    "# Criando a tela\n",
+    "screen = pygame.display.set_mode((WIDTH, HEIGHT))\n",
+    "pygame.display.set_caption(\"Xadrez\")\n",
     "\n",
-    "# Calcular a matriz de transformação de perspectiva\n",
-    "matrix = cv2.getPerspectiveTransform(src_points, dst_points)\n",
+    "def draw_board():\n",
+    "    for row in range(ROWS):\n",
+    "        for col in range(COLS):\n",
+    "            color = WHITE if (row + col) % 2 == 0 else BLACK\n",
+    "            pygame.draw.rect(screen, color, (col * SQUARE_SIZE, row * SQUARE_SIZE, SQUARE_SIZE, SQUARE_SIZE))\n",
     "\n",
-    "# Aplicar a transformação de perspectiva\n",
-    "result = cv2.warpPerspective(image, matrix, (width, height))\n",
+    "running = True\n",
+    "while running:\n",
+    "    draw_board()\n",
+    "    pygame.display.flip()\n",
+    "    \n",
+    "    for event in pygame.event.get():\n",
+    "        if event.type == pygame.QUIT:\n",
+    "            running = False\n",
     "\n",
-    "# Salvar a imagem recortada\n",
-    "cv2.imwrite('regiao_recortada.png', result)\n",
-    "\n",
-    "# Exibir a região recortada\n",
-    "cv2.imshow(\"Região Recortada\", result)\n",
-    "cv2.waitKey(0)\n",
-    "\n",
-    "# Fechar todas as janelas\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coordenadas: (14, 184)\n",
-      "Coordenadas: (14, 189)\n",
-      "Coordenadas: (629, 828)\n",
-      "Coordenadas: (657, 879)\n",
-      "Coordenadas: (271, 430)\n",
-      "Coordenadas: (273, 428)\n",
-      "Coordenadas: (147, 264)\n",
-      "Coordenadas: (285, 287)\n",
-      "Coordenadas: (217, 295)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import cv2\n",
-    "\n",
-    "# Função para capturar cliques do mouse\n",
-    "def get_coordinates(event, x, y, flags, param):\n",
-    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
-    "        print(f\"Coordenadas: ({x}, {y})\")\n",
-    "\n",
-    "# Carregar a imagem\n",
-    "image = cv2.imread('nwbufpqf.png')\n",
-    "\n",
-    "# Verificar se a imagem foi carregada corretamente\n",
-    "if image is None:\n",
-    "    print(\"Erro: Não foi possível carregar a imagem. Verifique o caminho do arquivo.\")\n",
-    "    exit()\n",
-    "\n",
-    "# Exibir a imagem e capturar cliques do mouse\n",
-    "cv2.namedWindow(\"Selecione os Pontos\")\n",
-    "cv2.setMouseCallback(\"Selecione os Pontos\", get_coordinates)\n",
-    "\n",
-    "while True:\n",
-    "    cv2.imshow(\"Selecione os Pontos\", image)\n",
-    "    key = cv2.waitKey(1) & 0xFF\n",
-    "    if key == ord(\"q\"):  # Pressione 'q' para sair\n",
-    "        break\n",
-    "\n",
-    "cv2.destroyAllWindows()"
+    "pygame.quit()\n"
    ]
   }
  ],
