--- a/Testes_Software/Sudoku/sudokuVerificatorF.ipynb
+++ b/Testes_Software/Sudoku/sudokuVerificatorF.ipynb
@@ -41,7 +41,6 @@
    ],
    "source": [
     "aleatorio = random.randint(0, 2**64 - 1)\n",
-    "print(aleatorio)\n",
     "tabuleiro = sudoku.Sudoku(3, seed=aleatorio)\n",
     "resposta = tabuleiro.solve()\n",
     "resposta.show()"
@@ -49,8 +48,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "id": "04af9aed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8, 2, 5, 3, 4, 9, 1, 6, 7], [1, 9, 6, 2, 7, 8, 3, 4, 5], [3, 7, 4, 6, 1, 5, 8, 2, 9], [6, 4, 8, 7, 5, 3, 9, 1, 2], [9, 1, 3, 8, 6, 2, 5, 7, 4], [2, 5, 7, 1, 9, 4, 6, 8, 3], [4, 8, 2, 5, 3, 1, 7, 9, 6], [5, 6, 9, 4, 8, 7, 2, 3, 1], [7, 3, 1, 9, 2, 6, 4, 5, 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(resposta.board)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "deec876d",
    "metadata": {},
    "outputs": [],
    "source": []
